# CarrotAndStick

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260606_0001_create_base_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  stats.py  tasks.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  task.py  task_mark.py  user.py  user_settings.py
backend/app/schemas/: auth.py  stats.py  tasks.py
backend/app/scripts/: seed_en_user_stats.py
backend/app/services/: auth.py  stats.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_stats.py  test_tasks.py
docs/: api.md  architecture.md  concept.md  decisions.md  fronent_design.md  next.md  plan.md  status.md  testing.md  ui_migration_audit.md
docs/ui/: 01_HeroStats.md  02_TaskRow.md  03_TaskHistory.md  04_StatusActionGroup.md  05_TaskGroup.md  06_BottomNavigation.md  07_TasksScreen.md  08_StatsSummary.md  09_StatsHeatmap.md  10_TopTasks.md  11_StatsScreen.md  12_TaskModal.md  13_AccountScreen.md  14_ArchiveScreen.md  15_LoginScreen.md  16_RegisterScreen.md  17_Modals.md  18_MotionSystem.md  19_Accessibility.md  20_DesignTokens.md  21_CodexRules.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: main.tsx  style.css
frontend/src/api/: auth.ts  client.ts  config.ts  stats.ts  tasks.ts
(+22 files in other folders)
