[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "carrot-stick-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.124.0",
  "uvicorn[standard]>=0.38.0",
  "sqlalchemy>=2.0.45",
  "alembic>=1.17.2",
  "psycopg[binary]>=3.3.2",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "PyJWT>=2.10.1",
  "pwdlib[argon2]>=0.3.0",
  "python-multipart>=0.0.20"
]

[tool.setuptools.packages.find]
include = ["app*"]

